Agregado operación promover usuario a administrador.